--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="enterNameOfList">Please enter name of new list</string>
     <string name="task_name">Please enter your task you want to add</string>
     <string name="add_task">Add</string>
+    <string name="enterNameOfNote">Please enter name of new note</string>
 </resources>
